--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,9 @@
-<h1>Register</h1>
+<h1>Login</h1>
+<% if (messages.error) { %>
+  <%= messages.error %>
+<% } %>
 
-<form action='/register' method="POST"> 
+<form action='/login' method="POST"> 
 
 <div>
     <label for="name"> Name </label>
@@ -19,7 +22,8 @@
   <input type="password" id="password" name="password" required>
 </div>
 
-<button type="submit">Register</button>
+<button type="submit">Login</button>
 
 </form>
-<a href="/login">Login</a>
+
+<a href="/register">Register</a>
