--- a/views/inviteToGroup.html
+++ b/views/inviteToGroup.html
@@ -9,5 +9,8 @@
         <button type="button" id="Acceptbtn">Accept</button>
         <button type="button" id="Declinebtn">Decline</button>
     </section>
+    <script
+        defer src="../src/inviteToGroup.js">
+    </script>
 </body>
 </html>
