Adding the Logout button and the overriding POST with DELETE

--- a/views/home.html
+++ b/views/home.html
@@ -50,5 +50,11 @@
 
     </div>
     <script language="text/javascript" defer src="../src/createGroup.js"></script>
+
+    
+<form action="/logout?_method=DELETE" method="POST">
+    <button type="submit">Log Out</button>
+  </form>
+
 </body>
 </html>
