Adding the Groups to the database

--- a/views/home.html
+++ b/views/home.html
@@ -49,7 +49,7 @@
         </form>
 
     </div>
-    <script language="text/javascript" defer src="../src/createGroup.js"></script>
+    <script language="text/javascript" defer src="../src/temp.js"></script>
 
     
 <form action="/logout?_method=DELETE" method="POST">
