--- a/public/form.css
+++ b/public/form.css
@@ -11,6 +11,19 @@ body {
     margin: 0;
 }
 
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
 .container {
     background-color: #fff;
     border-radius: 5px;
