--- a/views/home.html
+++ b/views/home.html
@@ -3,58 +3,51 @@
     <head>
     <title>Homepage</title>
     <meta charset="utf-8" />
-        <style>
-            body {
-                background-color:darkblue;
-                color: white;
-            }
-            .wrapper{
-                width: 400px;
-                max-width: 90%;
-                margin: 0 auto;
-            }
-            .wrapper label{
-                display: block;
-                margin: 0.5em 0;
-            }
-            .wrapper label input{
-                font-size: 18px;
-                padding: 0.5em;
-            }
-            .wrapper input[type="submit"]{
-                font-size: 25px;
-                color: blue;
-            }
-        </style>
-</head>
-<body>
-    <h1>Welcome to my Kudu Buddy</h1>
-    <p>
-    Kadel08 programmed This!
-    </p>
-    <div class="wrapper">
-
-        <form action="/home" class="form" method="GET">
-
-            <label id="emailField">
-                <input type="email" name="emailField" placeholder="email" required />
-            </label>
-            
-            <label id="groupNameField">
-                <input type="text" name="groupNameField" placeholder="groupName" required />
-            </label>
-
-            <input type="submit" value="Create a Group" name="submit" formmethod="POST" />
-        
+    <link rel="stylesheet" href="../public/home.css">
+    </head>
+        <body>
+            <h1>Welcome to my Kudu Buddy</h1>
+            <div class="container">
+                <div class="box">
+                    <div class="info">
+                    <h2>Create A Study Group</h2>
+                    <p>Let's make new friends and study with them</p>
+                    <a href="#" class="btn">Click Me</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="info">
+                        <h2>View Your Profile</h2>
+                        <p>See your study groups, friends and status</p>
+                        <a href="#" class="btn">Click Me</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="info">
+                        <h2>Let's chat</h2>
+                        <p>Chat with your friends in your study groups right now</p>
+                        <a href="#" class="btn">Click Me</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="info">
+                        <h2>Kudu Meeting</h2>
+                        <p>Organise online or face to face meetings</p>
+                        <a href="#" class="btn">Click Me</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="info">
+                        <h2>Send an Invite</h2>
+                        <p>Generate links or code to send to students to join the kudu fun</p>
+                        <a href="#" class="btn">Click Me</a>
+                    </div>
+                </div>
+            </div>
+        <form class="myFormClass" action="/logout?_method=DELETE" method="POST">
+            <div class="LogoutBtn">
+            <button type="submit">Log Out</button>
+            </div>
         </form>
-
-    </div>
-    <script language="text/javascript" defer src="../src/temp.js"></script>
-
-    
-<form action="/logout?_method=DELETE" method="POST">
-    <button type="submit">Log Out</button>
-  </form>
-
-</body>
+        </body>
 </html>
