Integrating Home with Create Group

--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
                     <div class="info">
                     <h2>Create A Study Group</h2>
                     <p>Let's make new friends and study with them</p>
-                    <a href="#" class="btn">Click Me</a>
+                    <a href="../views/createGroupForm.html" class="btn">Click Me</a>
                     </div>
                 </div>
                 <div class="box">
