Created Send Face-To-Face Invite functionality

--- a/views/chat.html
+++ b/views/chat.html
@@ -16,6 +16,11 @@
         <button type="submit" id="sendMessageButton">Send Message</button>
     </form>
 
+    <!-- Send COVID screening tool form -->
+    <form action="https://www.wits.ac.za/covid19/covid19-screening-tool/" method="get" target="_blank">
+        <button type="submit">Send Invite</button>
+    </form>
+
     <!-- Socket.io script-->
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/chat.js"></script>
