Fixed chat bugs

--- a/views/chat.html
+++ b/views/chat.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p>GROUP chat</p>
+    <p>Group Chat</p>
     <!--Creating the form send the message -->
     <form id="chatBox" action="">
         <input type="text" name="message" id="messageInput" placeholder="Begin typing message" autocomplete="off" />
