--- a/views/home.html
+++ b/views/home.html
@@ -40,7 +40,7 @@
                     <div class="info">
                         <h2>Send an Invite</h2>
                         <p>Generate links or code to send to students to join the kudu fun</p>
-                        <a href="../views/sendInvite.html" class="btn">Click Me</a>
+                        <a href="/sendInvite" class="btn">Click Me</a>
                     </div>
                 </div>
             </div>
