Added comments for functionality remaining

--- a/views/covidForm.html
+++ b/views/covidForm.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <h1>COVID-19 SCREENING TOOL</h1>
+    <p> Please complete the following as honestly as possible</p>
     <form name="covidForm" id="covidForm">
         <div>
             <p>Symptom Check: Are you suffering from any of the following symptoms?</p>
