Poll complete with tests

--- a/views/anonymousVotingPoll.html
+++ b/views/anonymousVotingPoll.html
@@ -10,10 +10,10 @@
         <h2>Voting for membership of: </h2>
         <img src=""/>
         <div class="voting">
-            <button style="display: inline-block;" id="yesbtn" onclick="incrementYesButton()">Yes</button>
+            <button style="display: inline-block;" id="yesbtn" onclick="setValue1()">Yes</button>
             <h3 style="display: inline-block;" id = "num1">0</h3>
             
-            <button id="nobtn" onclick="incrementNoButton()">No</button>
+            <button id="nobtn" onclick="setValue2()">No</button>
             <h3 style="display: inline-block;" id = "num2">0</h3>
         </div>
     </div>
