--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
                     <div class="info">
                         <h2>View Your Profile</h2>
                         <p>See your study groups, friends and status</p>
-                        <a href="#" class="btn">Click Me</a>
+                        <a href="/profile" class="btn">Click Me</a>
                     </div>
                 </div>
                 <div class="box">
