Rerouted Send Invite to Wits COVID-19 website

--- a/views/chat.html
+++ b/views/chat.html
@@ -17,7 +17,7 @@
     </form>
 
     <!-- Send COVID screening tool form -->
-    <form action="covidForm.html" method="get" target="_blank">
+    <form action="https://www.wits.ac.za/covid19/covid19-screening-tool/" method="get" target="_blank">
         <button type="submit">Send Invite</button>
     </form>
 
