--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,14 +6,14 @@
 <form action='/login' method="POST"> 
 
 <div>
-    <label for="name"> Name </label>
-    <input type="text" id="name" name="name" 
+    <label for="loginUsername"> Username </label>
+    <input type="text" id="loginUsername" name="loginUsername" 
     required>
 </div>
 
 <div>
-  <label for="email"> Email </label>
-  <input type="email" id="email" name="email"
+  <label for="loginEmail"> Email </label>
+  <input type="email" id="loginEmail" name="loginEmail" placeholder="example@gmail.com"
    required>
 </div>
 
