--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,8 +3,8 @@
 <form action='/register' method="POST"> 
 
 <div>
-    <label for="name"> Name </label>
-    <input type="text" id="name" name="name" 
+    <label for="username"> Username </label>
+    <input type="text" id="username" name="username" 
     required>
 </div>
 
@@ -17,6 +17,11 @@
 <div>
   <label for="password"> Password </label>
   <input type="password" id="password" name="password" required>
+</div>
+
+<div>
+  <label for="address"> Address </label>
+  <input type="address" id="address" name="address" required>
 </div>
 
 <button type="submit">Register</button>
