--- a/views/home.html
+++ b/views/home.html
@@ -24,16 +24,9 @@
                 </div>
                 <div class="box">
                     <div class="info">
-                        <h2>Let's chat</h2>
-                        <p>Chat with your friends in your study groups right now</p>
-                        <a href="#" class="btn">Click Me</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="info">
-                        <h2>Kudu Meeting</h2>
-                        <p>Organise online or face to face meetings</p>
-                        <a href="#" class="btn">Click Me</a>
+                        <h2>View Your Kudu Groups</h2>
+                        <p>See your teams, Chat with them and Enjoy the platform</p>
+                        <a href="/group" class="btn">Click Me</a>
                     </div>
                 </div>
                 <div class="box">
