Added Send Invite buttons to group homepage

--- a/views/chat.html
+++ b/views/chat.html
@@ -18,8 +18,13 @@
 
     <!-- Send COVID screening tool form -->
     <form action="/CovidScreening" method="get" target="_blank">
-        <button type="submit">Send Invite</button>
+        <button type="submit">Send Face-to-Face Meeting Invite</button>
     </form>
+
+    <form action="/CovidScreening" method="get" target="_blank">
+        <button type="submit">Send Online Meeting Invite</button>
+    </form>
+
 
     <!-- Socket.io script-->
     <script src="/socket.io/socket.io.js"></script>
