--- a/public/insideGroups.css
+++ b/public/insideGroups.css
@@ -292,12 +292,19 @@ section {
     /* Centering the elements of the modal */
     justify-content: center;
     align-items: center;
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0, 5s;
+}
+
+.popupActive {
+    visibility: visible;
+    opacity: 1;
 }
 
 .modal-content {
-    width: 300px;
-    height: 300px;
+    width: 40%;
+    height: 40%;
     background-color: white;
     border-radius: 4px;
     text-align: centre;
