Adding A group to the DB

--- a/views/insidegroups.html
+++ b/views/insidegroups.html
@@ -37,6 +37,6 @@
         </ul>
     </div>
     <div class="main_container">
-        <p>This is the home page</p>
+        <p>This is the chat page</p>
     </div>
 </body>
