--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,6 @@
 <h1>Register</h1>
 
+<link rel="stylesheet" type="text/css" href="../public/register.css">
 <form action='/register' method="POST"> 
 
 <div>
