--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,29 +1,48 @@
-<h1>Login</h1>
-<% if (messages.error) { %>
-  <%= messages.error %>
-<% } %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login to MyKuduBuddy App</title>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+<body>
+  <div class="container">
 
-<form action='/login' method="POST"> 
+     <div class="header">
+      <h1>Login to MyKuduBuddy App</h1>
+      <p> Please fill in your username, email and password. </p>
+      <% if (messages.error) { %>
+        <%= messages.error %>
+      <% } %>
+     </div>
+      <form class="form" action='/login' method="POST"> 
+      
+      <div class="form-control">
+          <label for="loginUsername"> Username </label>
+          <input type="text" id="loginUsername" name="loginUsername" 
+          required>
+      </div>
+      
+      <div class="form-control">
+        <label for="loginEmail"> Email </label>
+        <input type="email" id="loginEmail" name="loginEmail" placeholder="example@gmail.com"
+         required>
+      </div>
+      
+      <div class="form-control">
+        <label for="password"> Password </label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      
+      <button type="submit">Login</button>
+      
+      <p>Don't have an account? <a href="/register">Register here</a>. </p>
+      </form>
 
-<div>
-    <label for="loginUsername"> Username </label>
-    <input type="text" id="loginUsername" name="loginUsername" 
-    required>
-</div>
+  </div>
+  
+</body>
+</html>
 
-<div>
-  <label for="loginEmail"> Email </label>
-  <input type="email" id="loginEmail" name="loginEmail" placeholder="example@gmail.com"
-   required>
-</div>
-
-<div>
-  <label for="password"> Password </label>
-  <input type="password" id="password" name="password" required>
-</div>
-
-<button type="submit">Login</button>
-
-</form>
-
-<a href="/register">Register</a>
