--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,30 +1,47 @@
-<h1>Register</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register</title>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+<body>
+  <div class="container">
+     <div class="header">
+         <h1>Register to MyKuduBuddy App</h1>
+         <p> Please fill this form to create an account. </p>
+     </div>
 
-<form action='/register' method="POST"> 
-
-<div>
-    <label for="username"> Username </label>
-    <input type="text" id="username" name="username" 
-    required>
-</div>
-
-<div>
-  <label for="email"> Email </label>
-  <input type="email" id="email" name="email"
-   required>
-</div>
-
-<div>
-  <label for="password"> Password </label>
-  <input type="password" id="password" name="password" required>
-</div>
-
-<div>
-  <label for="address"> Address </label>
-  <input type="address" id="address" name="address" required>
-</div>
-
-<button type="submit">Register</button>
-
-</form>
-<a href="/login">Login</a>
+    <form class="form" action='/register' method="POST"> 
+    
+    <div class="form-control">
+        <label for="username"> Username </label>
+        <input type="text" id="username" name="username" 
+        required>
+    </div>
+    
+    <div class="form-control">
+      <label for="email"> Email </label>
+      <input type="email" id="email" name="email"
+       required>
+    </div>
+    
+    <div class="form-control">
+      <label for="password"> Password </label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    
+    <div class="form-control">
+      <label for="address"> Address </label>
+      <input type="address" id="address" name="address" required>
+    </div>
+    
+    <button type="submit">Register</button>
+    
+    <p>Already have an account? <a href="/login">Login</a>. </p> 
+    </form>
+  </div>
+</body>
+</html>
