Adding files from other branch

--- a/views/poll.html
+++ b/views/poll.html
@@ -36,7 +36,10 @@
             <li><a href="poll.html" id="onlink">Polls</a></li>
         </ul>
     </div>
+    
     <div class="main_container">
-        <p>This is the poll page</p>
+        <button id="Applicationbtn">View Pending Membership Applications</button>
+        <button id="Terminationbtn">View Pending Membership Termination Polls</button>
+        <script defer src="../src/poll.js"></script>
     </div>
 </body>
