--- a/views/sendInvite.html
+++ b/views/sendInvite.html
@@ -24,7 +24,7 @@
             <small>Error Message</small>
         </div>
             <button id="btn">Invite</button>
-            <button id="Homebtn">Cancel</button>
+            <button id="Homebtn">Go Home</button>
         <div id="msg">
             <pre></pre>
         </div>
