--- a/views/profile.html
+++ b/views/profile.html
@@ -1,54 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="bootstrap-4.5.3-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../public/profile.css">
-        <script defer src="../src/profile.js"></script>
-        </head>
+<head>
+<meta charset="utf-8" />
+<title>My Profile</title>
+<link rel="stylesheet" href="../public/form.css">
+<script defer src="profile.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h2>Profile</h2>
+        </div>
+    <form class="form" id="form">
+        <div class="form-control">
+            <label for="Username">Username</label>
+            
+        </div>
+        <div class="form-control">
+            <label for="Email">Email Address</label>
         
-        <body>
-            <div class="container">
-                <div class="main">
-                    <div class="sidebar">
-                        <div class="col-md-4 mt-1">
-                            <div class="card text-center sidebar">
-                                <h1 class="n-3 pt-3">Profile</h1>
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-3">
-                                            <h5>Full Name</h5>
-                                        </div>
-                                        <div class="col-md-9 text-secondary">
-                                            Farai Mutsvandiani
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row">
-                                        <div class="col-md-3">
-                                            <h5>Email</h5>
-                                        </div>
-                                        <div class="col-md-9 text-secondary">
-                                            1@gmail.com
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="form-control">
-                                        <div class="col-md-3">
-                                            <h5>Physical Address</h5>
-                                        </div>
-                                        
-                                        <input type="text" id="physicalAddress" placeholder="Edit Physical Address" >
-                                        
-                                        
-                                    </div>
-                                    <button class="updateBtn">Update</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                </div>
-            </div>
-        </body>
+        </div>
+        <div class="form-control">
+            <label for="Physical Address">Physical Address</label>
+            <input type="text" id="physicalAddress" placeholder="Enter Physical Address" required/>
+            <button id="updateBtn">Update</button>
+        </div>
+        <div>
+            <a href="/group" class="btn">View My Groups</a> 
+        </div>
+        <div id="msg">
+            <pre></pre>
+        </div>
+    </form>
+    </div>
+</body>
 </html>
