Added Send Location Functionality and Tests

--- a/views/chat.html
+++ b/views/chat.html
@@ -16,6 +16,8 @@
         <button type="submit" id="sendMessageButton">Send Message</button>
     </form>
 
+    <button type="button" id="sendLocation">Send Location</button>
+
     <!-- Send COVID screening tool form -->
     <form action="/CovidScreening" method="get" target="_blank">
         <button type="submit">Send Face-to-Face Meeting Invite</button>
