Testing for new Groups and DB implementation

--- a/views/createGroupForm.html
+++ b/views/createGroupForm.html
@@ -13,12 +13,12 @@
     </div>
 <form action="/creategroup" method="post" class="form">
   <div class="form-control">
-    <label for="fname">First name:</label>
+    <label for="fname">User Email Address:</label>
     <input type="email" id="email" name="email" placeholder="example@gmail.com" required><br><br>
     <small>Error Message</small>
   </div>
   <div class="form-control">
-    <label for="lname">Last name:</label>
+    <label for="lname">Study Group Name:</label>
     <input type="text" id="groupName"  name="groupName" placeholder="WITS303" required/><br><br>
     <small>Error Message</small>
 </div>
