--- a/public/form.css
+++ b/public/form.css
@@ -68,7 +68,7 @@ body {
     width: 100%;
 }
 
-.form-control.sucess input {
+.form-control.success input {
     border-color: #2ecc71;
 }
 
@@ -105,4 +105,26 @@ body {
     font-size: 14px;
     padding: 10px;
     width: 100%;
+}
+
+.form input[type=submit] {
+    background: #016ABC;
+    border: 2px solid #016ABC;
+    border-radius: 4px;
+    color: #fff;
+    display: block;
+    text-shadow: none;
+    font-family: inherit;
+    font-size: 14px;
+    padding: 10px;
+    width: 100%;
+}
+
+.form input[type=submit]:hover{
+    background-color: cornflowerblue;
+    color: #fff;
+    border: 2px solid #eee;   
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
 }
