Adding re-routing

--- a/views/grouppage.html
+++ b/views/grouppage.html
@@ -42,8 +42,8 @@
             <span class="fa fa-search"></span>
         </div>
         <ol>
-            <li><a href="#">home</a></li>
-            <li><a href="#">profile</a></li>
+            <li><a href="/home">home</a></li>
+            <li><a href="/profile">profile</a></li>
             <li><a href="#">contact us</a></li>
             <li><a href="#">about</a></li>
         </ol>
