Display Pop-up Modal

--- a/views/chat.html
+++ b/views/chat.html
@@ -5,30 +5,20 @@
     <title> My Kudu Buddy Web App</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../public/insideGroups.css">
 </head>
 
 <body>
-    <p>Group Chat</p>
-    <!--Creating the form send the message -->
-    <form id="chatBox" action="">
-        <input type="text" name="message" id="messageInput" placeholder="Begin typing message" autocomplete="off" />
-        <button type="submit" id="sendMessageButton">Send Message</button>
-    </form>
-
-    <!-- Send COVID screening tool form -->
-    <form action="/CovidScreening" method="get" target="_blank">
-        <button type="submit">Send Face-to-Face Meeting Invite</button>
-    </form>
-
-    <form action="/CovidScreening" method="get" target="_blank">
-        <button type="submit">Send Online Meeting Invite</button>
-    </form>
-
-
-    <!-- Socket.io script-->
-    <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="/chat.js"></script>
+    <div class="main_container">
+        <ol id="message" class="chatMessage"></ol>
+        <div class="chatFooter">
+            <!--Creating the form send the message -->
+            <form id="chatBox">
+                <input type="text" name="message" id="messageInput" placeholder="Begin typing message..." autofocus autocomplete="off" />
+                <button type="submit" id="sendMessageButton">Send Message</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
