--- a/public/insideGroups.css
+++ b/public/insideGroups.css
@@ -411,3 +411,28 @@ button:disabled {
         margin-right: 0
     }
 }
+
+
+/* Send Invite Styling */
+
+.modal {
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalContent {
+    height: 250px;
+    width: 300px;
+    position: relative;
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+}
