--- a/views/insidegroups.html
+++ b/views/insidegroups.html
@@ -34,7 +34,7 @@
             <li><a href="chat.html" id="onlink">Chats</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="files.html">Files</a></li>
-            <li><a href="classNotes.html">Notes</a></li>
+            <li><a href="classNotes.html">Meetings</a></li>
             <li><a href="poll.html">Polls</a></li>
         </ul>
     </div>
@@ -47,8 +47,9 @@
                 <button type="submit" id="sendMessageButton">Send Message</button>
             </form>
         </div>
+
+        <!-- Socket.io script-->
+        <script src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="/chat.js"></script>
     </div>
-    <!-- Socket.io script-->
-    <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="/chat.js"></script>
 </body>
