Corrected .js pathway

--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -60,6 +60,6 @@
         <button class="meetingBtn">Send Online Meeting Invite</button>
 
     </div>
-    <script type="text/javascript" src="../src/meetings.js"></script>
-    <script type="text/javascript" src="../src/covidForm.js"></script>
+    <script type="text/javascript" src="/meetings.js"></script>
+    <script type="text/javascript" src="/covidForm.js"></script>
 </body>
