Enter and details for meeting

--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -39,7 +39,7 @@
         </ul>
     </div>
 
-    <div class="main_container">
+    <div class="main_container" id="mainContainer">
         <!-- Send COVID screening tool form -->
         <form action="/CovidScreening" method="get" target="_blank">
             <button type="submit">Send Face-to-Face Meeting Invite</button>
@@ -51,7 +51,6 @@
                 <p> Please enter the Meeting Information below </p>
                 <input type="text" class="faceMeeting" placeholder="Meeting Date">
                 <input type="text" class="faceMeeting" placeholder="Meeting Time">
-                <input type="text" class="faceMeeting" placeholder="Exam? Lecture?">
                 <input type="submit" id="faceMeetingBtn" value="Send Invite">
             </div>
         </div>
