--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -41,9 +41,7 @@
 
     <div class="main_container" id="mainContainer">
         <!-- Send COVID screening tool form -->
-        <form action="/CovidScreening" method="get" target="_blank">
-            <button type="submit">Send Face-to-Face Meeting Invite</button>
-        </form>
+        <button type="submit" id="sendFaceInviteBtn">Create Face-to-Face Meeting Invite</button>
 
         <!--Create Popup Modal -->
         <div class="modal">
