Added close button for modal

--- a/public/insideGroups.css
+++ b/public/insideGroups.css
@@ -321,18 +321,6 @@ input {
 }
 
 
-/* Closing button */
-
-.close {
-    position: absolute;
-    top: 0;
-    right: 14px;
-    font-size: 42px;
-    transform: rotate(45deg);
-    cursor: pointer;
-}
-
-
 /* Chat styling */
 
 .chatMessage {
@@ -419,18 +407,22 @@ button:disabled {
     background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
-    position: absolute;
+    /* Makes the modal a percentage of the actual screen instead of the container */
+    position: fixed;
+    /* Allows modal to move with screen when the screen is scrolled*/
     top: 0;
     left: 0;
     right: 0;
     display: none;
     justify-content: center;
     align-items: center;
+    border: 1px solid blue;
+    border: 10px;
 }
 
 .modalContent {
-    height: 250px;
-    width: 300px;
+    height: 45%;
+    width: 45%;
     position: relative;
     background: #ffffff;
     padding: 20px;
@@ -440,11 +432,14 @@ button:disabled {
 
 /* Closing button */
 
-.close {
+.closeBtn {
     position: absolute;
-    top: 0;
-    right: 14px;
-    font-size: 42px;
-    transform: rotate(45deg);
+    top: 0px;
+    right: 0px;
+    font-size: 2rem;
     cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-weight: bolder;
 }
