--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -46,10 +46,11 @@
         <!--Create Popup Modal -->
         <div class="modal">
             <div class="modalContent">
-                <p> Please enter the Meeting Information below </p>
+                <p> Please enter the Date and Time of the meeting below: </p>
                 <input type="text" class="faceMeeting" placeholder="Meeting Date">
                 <input type="text" class="faceMeeting" placeholder="Meeting Time">
                 <input type="submit" id="faceMeetingBtn" value="Send Invite">
+                <button class="closeBtn" id="faceMeetingModalBtn">&times;</button>
             </div>
         </div>
 
