Connected COVID form to new Send Invite Button

--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -41,7 +41,7 @@
 
     <div class="main_container" id="mainContainer">
         <!-- Send COVID screening tool form -->
-        <button type="submit" id="sendFaceInviteBtn">Create Face-to-Face Meeting Invite</button>
+        <button class="meetingBtn" type="submit" id="sendFaceInviteBtn">Create Face-to-Face Meeting Invite</button>
 
         <!--Create Popup Modal -->
         <div class="modal">
@@ -55,7 +55,7 @@
         </div>
 
         <!-- Send Online Meeting Invite -->
-        <button class="meetingBtn">Send Online Meeting Invite</button>
+        <button class="meetingBtn" id="sendOnlineInviteBtn">Create Online Meeting Invite</button>
 
     </div>
     <script type="text/javascript" src="/meetings.js"></script>
