--- a/views/covidForm.html
+++ b/views/covidForm.html
@@ -58,7 +58,7 @@
 
         <input type="button" name="" value="Submit" onclick="covidScreening()">
     </form>
-    <script type="text/javascript" src="../src/covidForm.js"></script>
+    <script type="text/javascript" src="/covidForm.js"></script>
 </body>
 
 </html>
