Voting and listing of all polls remaining

--- a/views/terminationPoll.html
+++ b/views/terminationPoll.html
@@ -3,9 +3,10 @@
 <head>
     <title>Member Poll</title>
     <link rel="stylsheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-    <link rel="stylesheet" href="../public/votingStyle.css">
+    <!-- <link rel="stylesheet" href="../public/votingStyle.css"> -->
 </head>
 <body>
+    <h1 id = myHeading>Vote in each termination poll here</h1>
 <div class="poll">
   <div class="question"></div>
   <div class="answers"></div>
