--- a/views/poll.html
+++ b/views/poll.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../public/insideGroups.css">
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body>
     <input type="checkbox" id="check">
