Fixing styling errors

--- a/views/files.html
+++ b/views/files.html
@@ -34,7 +34,7 @@
             <li><a href="insidegroups.html">Chats</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="files.html" id="onlink">Files</a></li>
-            <li><a href="classNotes.html">Invites</a></li>
+            <li><a href="classNotes.html">Meetings</a></li>
             <li><a href="poll.html">Polls</a></li>
         </ul>
     </div>
