--- a/views/sendInvite.html
+++ b/views/sendInvite.html
@@ -23,7 +23,7 @@
             <input type="text" id="groupName" placeholder="WITS303" required/>
             <small>Error Message</small>
         </div>
-            <button id="btn">Invite</button>
+            <button id="btn">Invite</button><br></br>
             <button id="Homebtn">Go Home</button>
         <div id="msg">
             <pre></pre>
