--- a/views/team.html
+++ b/views/team.html
@@ -32,7 +32,7 @@
             <li><a href="insidegroups.html" >Chats</a></li>
             <li><a href="team.html" id="onlink">Team</a></li>
             <li><a href="files.html">Files</a></li>
-            <li><a href="classNotes.html">Notes</a></li>
+            <li><a href="classNotes.html">Meetings</a></li>
             <li><a href="poll.html">Polls</a></li>
         </ul>
     </div>
