--- a/views/classNotes.html
+++ b/views/classNotes.html
@@ -34,7 +34,7 @@
             <li><a href="insidegroups.html">Chats</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="files.html">Files</a></li>
-            <li><a href="classNotes.html" id="onlink">Meeting Invites</a></li>
+            <li><a href="classNotes.html" id="onlink">Meetings</a></li>
             <li><a href="poll.html">Polls</a></li>
         </ul>
     </div>
