Fixed modal close button

--- a/views/insidegroups.html
+++ b/views/insidegroups.html
@@ -51,5 +51,7 @@
         <!-- Socket.io script-->
         <script src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="/chat.js"></script>
+        <script type="module" src="./acceptDecline.js"></script>
+        <script type="module" src="./covidForm.js"></script>
     </div>
 </body>
