--- a/views/covidForm.html
+++ b/views/covidForm.html
@@ -59,6 +59,7 @@
         <input type="button" name="" value="Submit" onclick="covidScreening()">
     </form>
     <script type="text/javascript" src="/covidForm.js"></script>
+    <script type="module" src="./acceptDecline.js"></script>
 </body>
 
 </html>
