Add accept/decline modal

--- a/views/covidForm.html
+++ b/views/covidForm.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> COVID-19 SCREENING TOOL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../public/css/covidForm.css">
+    <link rel="stylesheet" type="text/css" href="../public/covidForm.css">
 </head>
 
 <body>
@@ -58,6 +58,15 @@
 
         <input type="button" name="" value="Submit" onclick="covidScreening()">
     </form>
+    <!--Create Popup Modal -->
+    <div class="modal">
+        <div class="modalContent">
+            <p>To accept/decline this invitation please click the button below</p>
+            <button class="acceptDecline" id="acceptBtn">Accept Invitation</button>
+            <button id="declineBtn">Decline Invitation</button>
+            <button class="closeBtn" id="faceMeetingModalBtn">&times;</button>
+        </div>
+    </div>
     <script type="text/javascript" src="/covidForm.js"></script>
     <script type="module" src="./acceptDecline.js"></script>
 </body>
