Refactoring Code and styling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,10 +3,12 @@
     <head>
     <title>Homepage</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../public/home.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/css/home.css">
     </head>
         <body>
-            <h1>Welcome to my Kudu Buddy</h1>
+            <h1>Welcome to my Kudu Buddy <%= name%></h1>
             <div class="container">
                 <div class="box">
                     <div class="info">
@@ -27,6 +29,7 @@
                         <h2>View Your Kudu Groups</h2>
                         <p>See your teams, Chat with them and Enjoy the platform</p>
                         <a href="/group" class="btn">Click Me</a>
+                        <script></script>
                     </div>
                 </div>
                 <div class="box">
