--- a/views/createGroupForm.html
+++ b/views/createGroupForm.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Let us make a study group</title>
-        <link rel="stylesheet" href="../public/form.css">
+        <link rel="stylesheet" type="text/css" href="/css/form.css">
     </head>
 <body>
 <div class="container">
@@ -14,12 +14,12 @@
 <form action="/creategroup" method="post" class="form">
   <div class="form-control">
     <label for="fname">User Email Address:</label>
-    <input type="email" id="email" name="email" placeholder="example@gmail.com" required><br><br>
+    <input type="email" id="email" name="email" placeholder="i.e example@gmail.com" required><br><br>
     <small>Error Message</small>
   </div>
   <div class="form-control">
     <label for="lname">Study Group Name:</label>
-    <input type="text" id="groupName"  name="groupName" placeholder="WITS303" required/><br><br>
+    <input type="text" id="groupName"  name="groupName" placeholder="i.e WITS303" required/><br><br>
     <small>Error Message</small>
 </div>
     <input type="submit" value="Add Group">
