Enabling global styling

--- a/views/grouppage.html
+++ b/views/grouppage.html
@@ -4,7 +4,7 @@
     <title>Group Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../public/page.css">
+    <link rel="stylesheet" type="text/css" href="/css/page.css">
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
                 <script>
                 function changeLanguage(language) {
