--- a/views/poll.html
+++ b/views/poll.html
@@ -4,7 +4,7 @@
     <title>Inside Group Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../public/insideGroups.css">
+    <link rel="stylesheet" type="text/css" href="/css/insideGroups.css">
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
 </head>
 <body>
